SportiduinoManager: a couple of bug fixes and layout changes

--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
@@ -44,7 +44,9 @@
             android:id="@+id/info_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_padding"
+            android:layout_margin="@dimen/default_padding"
+            android:padding="@dimen/default_padding"
+            android:gravity="center_horizontal"
             android:scrollHorizontally="false"
             android:text="@string/info_help"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
+            android:gravity="center_horizontal"
             android:scrollHorizontally="false"
             android:text="@string/info_team_name"
             android:textAppearance="@style/AppTheme.TextMedium"
@@ -108,7 +111,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/info_point_list"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:layout_marginBottom="@dimen/default_padding"
             android:clickable="false"
