--- a/SportiduinoManager/app/src/main/res/values/styles.xml
+++ b/SportiduinoManager/app/src/main/res/values/styles.xml
@@ -36,6 +36,9 @@
         <item name="android:textColor">?android:textColorPrimaryInverse</item>
     </style>
 
+    <style name="AppTheme.ButtonColored" parent="Widget.AppCompat.Button.Colored">
+    </style>
+
     <style name="AppTheme.ProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
         <item name="android:minWidth">96dp</item>
     </style>
