--- a/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
@@ -237,7 +237,7 @@
             android:id="@+id/station_chips_registered_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/unknown"
+            android:text="@string/station_chips_registered_n"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
