--- a/SportiduinoManager/app/src/main/res/values/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values/errors.xml
@@ -19,6 +19,7 @@
     <string name="err_bt_receive_timeout">Station communication timeout</string>
     <string name="err_bt_receive_bad_response">Incorrect station response</string>
     <string name="err_bt_response_wrong_length">Station response has wrong length</string>
+    <string name="err_bt_wrong_firmware">Station firmware version is %1$d, supported version is only %2$d</string>
 
     <string name="err_init_no_such_team">No team with this number</string>
     <string name="err_init_empty_team">A team should consist of 1 or more members</string>
