--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:local="http://schemas.android.com/tools"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_1"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_2"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_3"
             app:layout_constraintStart_toEndOf="@id/key_1"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -47,6 +49,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_3"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_4"
             app:layout_constraintStart_toEndOf="@id/key_2"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -58,6 +61,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_4"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_5"
             app:layout_constraintStart_toEndOf="@id/key_3"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -69,6 +73,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_5"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_del"
             app:layout_constraintStart_toEndOf="@id/key_4"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -81,6 +86,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_del"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/key_5"
             app:layout_constraintTop_toTopOf="@id/line1"
@@ -94,6 +100,7 @@
             android:layout_marginTop="@dimen/default_padding"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_6"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/key_1"
@@ -105,6 +112,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_7"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_8"
             app:layout_constraintStart_toEndOf="@id/key_6"
             app:layout_constraintTop_toTopOf="@id/key_6"
@@ -116,6 +124,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_8"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_9"
             app:layout_constraintStart_toEndOf="@id/key_7"
             app:layout_constraintTop_toTopOf="@id/key_6"
@@ -127,6 +136,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_9"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_0"
             app:layout_constraintStart_toEndOf="@id/key_8"
             app:layout_constraintTop_toTopOf="@id/key_6"
@@ -139,6 +149,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_0"
+            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_clear"
             app:layout_constraintStart_toEndOf="@id/key_9"
             app:layout_constraintTop_toTopOf="@id/key_6"
@@ -151,6 +162,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_clear"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/key_0"
             app:layout_constraintTop_toTopOf="@id/key_6"
@@ -170,7 +182,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/key_6"
-            local:targetApi="28" />
+            tools:targetApi="28" />
 
         <android.support.constraint.Group
             android:id="@+id/init_team_data"
@@ -197,6 +209,7 @@
             android:layout_marginTop="@dimen/default_padding"
             android:text="@string/team_maps_count"
             android:textAppearance="@style/AppTheme.TextMedium"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/init_team_name" />
@@ -256,6 +269,7 @@
             android:scrollHorizontally="false"
             android:text="@string/team_members_count"
             android:textAppearance="@style/AppTheme.TextMedium"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/init_already" />
