--- a/SportiduinoManager/app/src/main/res/layout/device_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/device_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -31,6 +32,6 @@
         android:contentDescription="@string/device_connect_description"
         android:padding="@dimen/default_padding"
         android:src="@drawable/ic_disconnected"
-        android:tint="@android:color/background_light" />
+        app:tint="@android:color/background_light" />
 
 </RelativeLayout>
