--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
@@ -2,13 +2,14 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:local="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <FrameLayout
@@ -24,6 +25,7 @@
 
             <Button
                 android:id="@+id/info_request_button"
+                style="@style/AppTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -44,15 +46,26 @@
             android:id="@+id/info_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_padding"
-            android:padding="@dimen/default_padding"
             android:gravity="center_horizontal"
+            android:padding="@dimen/default_padding"
             android:scrollHorizontally="false"
             android:text="@string/info_help"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_request_frame" />
 
+        <Switch
+            android:id="@+id/info_save_to_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:padding="@dimen/default_padding"
+            android:text="@string/info_save_to_db"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/info_help"
+            local:showText="false"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/info_team_data"
@@ -73,7 +86,7 @@
             android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/info_request_frame" />
+            app:layout_constraintTop_toBottomOf="@+id/info_save_to_db" />
 
         <TextView
             android:id="@+id/info_init_time"
@@ -87,7 +100,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/info_member_list"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:choiceMode="multipleChoice"
@@ -110,7 +123,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/info_point_list"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:layout_marginBottom="@dimen/default_padding"
