--- a/SportiduinoManager/app/src/main/res/layout/activity_controlpoint.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_controlpoint.xml
@@ -102,6 +102,7 @@
 
         <Button
             android:id="@+id/cp_save_mask"
+            style="@style/AppTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
