--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_1"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_2"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_2"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_3"
             app:layout_constraintStart_toEndOf="@id/key_1"
@@ -49,6 +51,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_3"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_4"
             app:layout_constraintStart_toEndOf="@id/key_2"
@@ -61,6 +64,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_4"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_5"
             app:layout_constraintStart_toEndOf="@id/key_3"
@@ -73,6 +77,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_5"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_del"
             app:layout_constraintStart_toEndOf="@id/key_4"
@@ -86,6 +91,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_del"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/key_5"
@@ -100,6 +106,7 @@
             android:layout_marginTop="@dimen/default_padding"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_6"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_7"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,6 +119,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_7"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_8"
             app:layout_constraintStart_toEndOf="@id/key_6"
@@ -124,6 +132,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_8"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_9"
             app:layout_constraintStart_toEndOf="@id/key_7"
@@ -136,6 +145,7 @@
             android:layout_height="wrap_content"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_9"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_0"
             app:layout_constraintStart_toEndOf="@id/key_8"
@@ -149,6 +159,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_0"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/key_clear"
             app:layout_constraintStart_toEndOf="@id/key_9"
@@ -162,6 +173,7 @@
             android:clickable="false"
             android:onClick="keyboardButtonClicked"
             android:text="@string/key_clear"
+            style="@style/AppTheme.Button"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/key_0"
@@ -231,7 +243,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:onClick="initChip"
-                android:text="@string/init_team_chip" />
+                android:text="@string/init_team_chip"
+                style="@style/AppTheme.Button" />
 
             <ProgressBar
                 android:id="@+id/init_team_chip_progress"
