--- a/SportiduinoManager/app/src/main/res/layout/activity_main.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,10 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available -->
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <FrameLayout
             android:id="@+id/activity_content"
@@ -34,10 +33,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
+        app:headerLayout="@layout/menu_header"
         app:itemIconTint="@color/menu_selector"
         app:itemTextColor="@color/menu_selector"
-        local:headerLayout="@layout/menu_header"
-        local:menu="@menu/menu_navigation" />
+        app:menu="@menu/menu_navigation"
+        app:theme="@style/AppTheme.NavigationView" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
