--- a/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
@@ -14,13 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginStart="@dimen/default_padding"
-        android:layout_marginLeft="@dimen/default_padding"
-        android:layout_marginTop="@dimen/list_padding"
-        android:layout_marginBottom="@dimen/list_padding"
         android:checked="true"
         android:focusable="false"
+        android:padding="@dimen/default_padding"
         android:textAppearance="@style/AppTheme.TextMedium"
         tools:text="Member XXX" />
 
