--- a/SportiduinoManager/app/src/main/res/values-ru/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/errors.xml
@@ -17,8 +17,13 @@
     <string name="err_bt_cant_connect">Подключиться к станции не удалось</string>
     <string name="err_bt_send_failed">Ошибка отправки запроса к станции</string>
     <string name="err_bt_receive_timeout">Станция не отвечает</string>
-    <string name="err_bt_receive_bad_response">Некорректный ответ станции</string>
-    <string name="err_bt_response_wrong_length">Неправильная длина ответа станции</string>
+    <string name="err_bt_receive_bad_signature">Неправильный первый байт ответа станции</string>
+    <string name="err_bt_receive_bad_nopayload">В ответе станции есть только заголовок без данных</string>
+    <string name="err_bt_receive_bad_payloadlen">В ответе станции неправильная длина данных в заголовке</string>
+    <string name="err_bt_receive_bad_stationnum">В ответе станции неправильный номер станции в заголовке</string>
+    <string name="err_bt_receive_bad_crc">В ответе станции неправильная контрольная сумма в заголовке</string>
+    <string name="err_bt_receive_bad_commandcode">В ответе станции неправильный код команды в заголовке</string>
+    <string name="err_bt_response_wrong_length">Неправильная длина ответа станции для этой команды</string>
     <string name="err_bt_wrong_firmware">Версия прошивки станции - %1$d, поддерживаемая версия - только %2$d</string>
 
     <string name="err_init_no_such_team">Команды с таким номером не существует</string>
