--- a/SportiduinoManager/app/src/main/res/layout/menu_header.xml
+++ b/SportiduinoManager/app/src/main/res/layout/menu_header.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
@@ -27,6 +26,6 @@
         android:gravity="start|center_vertical"
         android:singleLine="true"
         android:text="@string/navigation_header"
-        app:theme="@style/AppTheme.NavigationHeader" />
+        android:theme="@style/AppTheme.NavigationHeader" />
 
 </RelativeLayout>
